@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.5
+Version: 5.6
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -152,6 +152,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR MOBILE MENU */
+.mobile-nav-container {display:none;}
 .mobile-nav-toggle {display:none;}
 .mobile-nav {display:none;}
 
@@ -260,7 +261,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 
 /* COMMENTS RESPOND */
-#respond {width:100%; clear:both;}
+#respond {width:100%; clear:both; padding:0 0 10px;}
 .comment-form label {padding:0 0 5px; display:block;}
 .comment-form input, .comment-form textarea {width:80%;}
 .comment-form input[type="submit"] {width:auto;}
@@ -314,6 +315,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.nav-primary {display:none;} 
 
 	/* SIDEBAR MOBILE MENU */
+	.mobile-nav-container {clear:both; display:block;}
 	.mobile-nav-toggle {clear:both; display:block; margin:0 0 20px; padding:10px 2%; background:#444; color:#ddd; cursor:pointer;}
 	.mobile-nav-toggle:hover {color:#fff;}
 	.mobile-nav {clear:both; padding:10px 20px 10px 0; margin:0 5px 20px; background:none; border:2px solid #ddd;}
